unpackaged/main/default/objects/Activity/fields/Event_Category__c.field-meta.xml
<CustomField>
    <fullName>Event_Category__c</fullName>
    <defaultValue>"None"</defaultValue>
    <label>Event Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>