unpackaged/main/default/objects/Activity/fields/MitelSF__ANI__c.field-meta.xml
<CustomField>
    <fullName>MitelSF__ANI__c</fullName>
    <description>Mitel Custom Field</description>
    <inlineHelpText>Phone number of caller</inlineHelpText>
    <label>ANI</label>
    <type>Phone</type>
</CustomField>