unpackaged/main/default/objects/Activity/fields/Task_Category__c.field-meta.xml
<CustomField>
    <fullName>Task_Category__c</fullName>
    <defaultValue>"None"</defaultValue>
    <description>mkneill - 8/19/16 added as requested by rbell</description>
    <label>Task Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>